--- a/social-app/src/Pages/Home/Home.css
+++ b/social-app/src/Pages/Home/Home.css
@@ -6,3 +6,14 @@
     bottom: 0;
     box-shadow:  0 1px 3px 0 var(--boxShadow-color);
 }
+
+.home_aside{
+    flex: 1
+}
+
+.home_main{
+    flex: 3;
+}
+.home_right{
+    flex: 1;
+}
