--- a/social-app/src/App.css
+++ b/social-app/src/App.css
@@ -1,5 +1,7 @@
 @import url("https://playx-ui.netlify.app/styles/main.css");
 
-root{
+:root{
   width: 100vw;
+  box-sizing: border-box;
+  background-color: #edf2f6;
 }
