--- a/social-app/src/Pages/Auth/Login/Login.css
+++ b/social-app/src/Pages/Auth/Login/Login.css
@@ -1,3 +1,4 @@
+
 .login_navbar{
     z-index: 1;
     box-shadow:  0 1px 3px 0 var(--boxShadow-color);
@@ -9,6 +10,7 @@
     box-shadow: 1px 2px 1px 1px var(--boxShadow-color);
     border-radius: 4px;
     text-align: center;
+    background-color: white;
 }
 
 .login-email-label {
