--- a/social-app/src/Pages/Auth/Signup/Signup.css
+++ b/social-app/src/Pages/Auth/Signup/Signup.css
@@ -9,6 +9,7 @@
     box-shadow: 1px 2px 1px 1px var(--boxShadow-color);
     border-radius: 4px;
     text-align: center;
+    background-color: white;
 }
 
 .Signup-email-label {
