--- a/social-app/src/index.css
+++ b/social-app/src/index.css
@@ -11,3 +11,26 @@ body {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
   }
+  @media only screen and (min-width: 600px) and (max-width: 1024px) {
+    html, body {
+        font-size: 80%;
+    }
+  }
+  
+  @media only screen and (min-width: 1024px) and (max-width: 1399px) {
+    html, body {
+        font-size: 90%;
+    }
+  }
+  
+  @media only screen and (min-width: 1400px) and (max-width: 1920px) {
+    html, body {
+        font-size: 100%;
+    }
+  }
+  
+  @media only screen and (min-width: 1921px)  {
+    html, body {
+        font-size: 120%;
+    }
+  }
